Fix style of collapse item button

--- a/src/styles/collapse.scss
+++ b/src/styles/collapse.scss
@@ -29,11 +29,12 @@
       width: 32px;
       height: 32px;
       background-color: var(--s-color-base-background);
-      border-radius: 50%;
+      border-radius: 8px;
       &.is-active {
-        transform: rotate(180deg);
+        transform: scale(1, -1);
       }
-      &:hover, &:focus {
+      &:hover,
+      &:focus {
         background-color: var(--s-color-base-background-hover);
       }
     }
